fix/overflowing-in-homescreen

--- a/src/component/Footer/index.module.scss
+++ b/src/component/Footer/index.module.scss
@@ -7,11 +7,11 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
-  position: absolute;
-  bottom:20rem;
+  position:absolute;
+  top:90vh;
   left:50%;
   transform: translateX(-50%);
-
+  
 
   .plusIcon {
     background: var(--gradient-blue);
